# memory

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.MD  CHANGELOG.md  CMakeLists.txt  CNAME  LICENSE  README.md  aligned__allocator_8hpp.html  aligned_allocator.hpp  allocator__storage_8hpp.html  allocator__traits_8hpp.html  allocator_adapter.hpp  allocator_traits.hpp  appveyor.yml  biicode.conf  class_catch_1_1_string_ref-members.html  class_catch_1_1_string_ref.html  classfoonathan_1_1memory_1_1aligned__allocator-members.html  classfoonathan_1_1memory_1_1aligned__allocator.html  classfoonathan_1_1memory_1_1allocator__adapter-members.html  classfoonathan_1_1memory_1_1allocator__adapter.html  classfoonathan_1_1memory_1_1allocator__deallocator-members.html  classfoonathan_1_1memory_1_1allocator__deallocator.html  classfoonathan_1_1memory_1_1allocator__deallocator_3_01_type_0f_0e_00_01_raw_allocator_00_01_mutex_01_4-members.html  classfoonathan_1_1memory_1_1allocator__deallocator_3_01_type_0f_0e_00_01_raw_allocator_00_01_mutex_01_4.html  classfoonathan_1_1memory_1_1allocator__deallocator_3_01_type_0f_0e_00_01_raw_allocator_01_4-members.html  classfoonathan_1_1memory_1_1allocator__deallocator_3_01_type_0f_0e_00_01_raw_allocator_01_4.html  classfoonathan_1_1memory_1_1allocator__deleter-members.html  classfoonathan_1_1memory_1_1allocator__deleter.html  classfoonathan_1_1memory_1_1allocator__deleter_3_01_type_0f_0e_00_01_raw_allocator_00_01_mutex_01_4-members.html  classfoonathan_1_1memory_1_1allocator__deleter_3_01_type_0f_0e_00_01_raw_allocator_00_01_mutex_01_4.html  classfoonathan_1_1memory_1_1allocator__deleter_3_01_type_0f_0e_00_01_raw_allocator_01_4-members.html  classfoonathan_1_1memory_1_1allocator__deleter_3_01_type_0f_0e_00_01_raw_allocator_01_4.html  classfoonathan_1_1memory_1_1allocator__polymorphic__deallocator-members.html  classfoonathan_1_1memory_1_1allocator__polymorphic__deallocator.html  classfoonathan_1_1memory_1_1allocator__polymorphic__deleter-members.html  classfoonathan_1_1memory_1_1allocator__polymorphic__deleter.html  classfoonathan_1_1memory_1_1allocator__reference-members.html  (+320 more)
.github/workflows/: code_coverage.yml  feature_ci.yml  main_ci.yml
build_qnx/: common.mk
cmake/: atomic.cmake  compatibility.cmake  configuration.cmake  container_node_sizes_impl.hpp.in  cpp11.cmake  foonathan_memory-config-version.cmake.in  foonathan_memory-config.cmake  get_align_of.cpp  get_container_node_sizes.cmake  get_node_size.cpp
detail/: align.hpp  block_list.cpp  block_list.hpp  free_list.cpp  free_list.hpp  memory_block.hpp  memory_stack.cpp  memory_stack.hpp  small_free_list.cpp  small_free_list.hpp
doc/: Doxyfile  DoxygenLayout.xml  adapters_storage.md  concepts.md  debug_error.md  external_usage.md  footer.html  header.html  index.md  installation.md  internal_usage.md  options.md  publish-docs.sh  tutorial.md  writing_allocators.md
example/: CMakeLists.txt  allocator.cpp  allocator_storage.cpp  joint_allocation.cpp  main.cpp  smart_ptr.cpp  taking_allocators.cpp  temporary.cpp  tracking.cpp  using_allocators.cpp
include/foonathan/memory/: aligned_allocator.hpp  allocator_adapter.hpp  allocator_storage.hpp  allocator_traits.hpp  config.hpp  container.hpp  debugging.hpp  default_allocator.hpp  deleter.hpp  error.hpp  fallback_allocator.hpp  heap_allocator.hpp  iteration_allocator.hpp  joint_allocator.hpp  malloc_allocator.hpp  memory_arena.hpp  memory_pool.hpp  memory_pool_collection.hpp  memory_pool_type.hpp  memory_resource_adapter.hpp  memory_stack.hpp  namespace_alias.hpp  new_allocator.hpp  pool_allocator.hpp  pool_collection.hpp  pool_type.hpp  raw_allocator_base.hpp  segregator.hpp  smart_ptr.hpp  stack_allocator.hpp  static_allocator.hpp  std_allocator.hpp  temporary_allocator.hpp  threading.hpp  tracking.hpp  virtual_memory.hpp
include/foonathan/memory/detail/: align.hpp  assert.hpp  block_list.hpp  container_node_sizes.hpp  debug_helpers.hpp  ebo_storage.hpp  error_helpers.hpp  free_list.hpp  free_list_array.hpp  ilog2.hpp  lowlevel_allocator.hpp  memory_stack.hpp  small_free_list.hpp  utility.hpp
src/: CMakeLists.txt  config.hpp.in  container_node_sizes.hpp.in  debugging.cpp  error.cpp  heap_allocator.cpp  iteration_allocator.cpp  malloc_allocator.cpp  memory_arena.cpp  memory_pool.cpp  memory_pool_collection.cpp  memory_stack.cpp  new_allocator.cpp  static_allocator.cpp  temporary_allocator.cpp  virtual_memory.cpp
src/detail/: align.cpp  assert.cpp  block_list.cpp  debug_helpers.cpp  error_helpers.cpp  free_list.cpp  free_list_array.cpp  free_list_utils.hpp  ilog2.hpp  memory_stack.cpp  small_free_list.cpp
test/: CMakeLists.txt  aligned_allocator.cpp  allocator_traits.cpp  benchmark.hpp  default_allocator.cpp  fallback_allocator.cpp  iteration_allocator.cpp  joint_allocator.cpp  memory_arena.cpp  memory_pool.cpp  memory_pool_collection.cpp  memory_resource_adapter.cpp  memory_stack.cpp  pool_allocator.cpp  pool_collection.cpp  profiling.cpp  segregator.cpp  smart_ptr.cpp  stack_allocator.cpp  test.cpp  test_allocator.hpp
test/detail/: align.cpp  block_list.cpp  debug_helpers.cpp  free_list.cpp  free_list_array.cpp  ilog2.cpp  memory_stack.cpp
tool/: CMakeLists.txt  node_size_debugger.cpp  node_size_debugger.hpp  test_types.hpp
